--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,21 @@
-<ion-tabs>
-
+<ion-tabs (ionTabsDidChange)="getSelected($event)">
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="contacts">
+      <ion-icon
+        [name]="selectedTab==='contacts'?'person-sharp':'person-outline'"
+      ></ion-icon>
+      <ion-label [ngClass]="selectedTab==='contacts'?'bold-text':''"
+        >Contacts</ion-label
+      >
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="settings">
+      <ion-icon
+        [name]="selectedTab==='settings'?'settings-sharp':'settings-outline'"
+      ></ion-icon>
+      <ion-label [ngClass]="selectedTab==='settings'?'bold-text':''"
+        >Settings</ion-label
+      >
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
